--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <!-- Python IIT Bombay -->
           <div class="group bg-white dark:bg-zinc-900 rounded-3xl overflow-hidden hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-[85vw] sm:w-80 lg:w-96 snap-center flex flex-col">
             <div class="h-56 bg-zinc-50 dark:bg-zinc-800 p-4 flex items-center justify-center border-b border-zinc-200 dark:border-zinc-700">
-              <img src="/Certificates/IMAGES/Python_IIT_Bombay.jpg" 
+              <img src="/Python_IIT_Bombay.jpg" 
                    alt="Python IIT Bombay Certificate"
                    class="max-h-full w-auto shadow-lg rounded hover:scale-105 transition-transform duration-300">
             </div>
@@ -403,7 +403,7 @@
               <h3 class="font-semibold text-lg sm:text-xl mb-1">IIT Bombay Python</h3>
               <p class="text-sm text-zinc-500 dark:text-zinc-400 mb-3">Python • IIT Bombay • 2025</p>
               <p class="text-sm text-zinc-600 dark:text-zinc-300 mb-6 flex-grow"></p>
-              <a href="/Certificates/PDF/Python_IIT_Bombay.pdf" 
+              <a href="/Python_IIT_Bombay.pdf" 
                  download="Rachit-Jain-Python-IIT-Bombay.pdf"
                  class="mt-auto py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium flex items-center justify-center gap-2 hover:shadow-lg transition">
                 <i class="fa-solid fa-download"></i> Download Certificate
@@ -414,7 +414,7 @@
           <!-- Power BI Workshop -->
           <div class="group bg-white dark:bg-zinc-900 rounded-3xl overflow-hidden hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-[85vw] sm:w-80 lg:w-96 snap-center flex flex-col">
             <div class="h-56 bg-zinc-50 dark:bg-zinc-800 p-4 flex items-center justify-center border-b border-zinc-200 dark:border-zinc-700">
-              <img src="/Certificates/IMAGES/Power_Bi_OfficeMaster.jpg" 
+              <img src="/Power_Bi_OfficeMaster.jpg" 
                    alt="Power BI Workshop"
                    class="max-h-full w-auto shadow-lg rounded hover:scale-105 transition-transform duration-300">
             </div>
@@ -422,7 +422,7 @@
               <h3 class="font-semibold text-lg sm:text-xl mb-1">Power BI Workshop</h3>
               <p class="text-sm text-zinc-500 dark:text-zinc-400 mb-3">OfficeMaster • 2025</p>
               <p class="text-sm text-zinc-600 dark:text-zinc-300 mb-6 flex-grow">Practical DAX, modeling, reports & real-time dashboards.</p>
-              <a href="/Certificates/PDF/Power_Bi_OfficeMaster.pdf" 
+              <a href="/Power_Bi_OfficeMaster.pdf" 
                  download="Rachit-Jain-Power-BI-Workshop.pdf"
                  class="mt-auto py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium flex items-center justify-center gap-2 hover:shadow-lg transition">
                 <i class="fa-solid fa-download"></i> Download Certificate
@@ -433,7 +433,7 @@
           <!-- Advanced Excel -->
           <div class="group bg-white dark:bg-zinc-900 rounded-3xl overflow-hidden hover:shadow-2xl transition-all duration-300 flex-shrink-0 w-[85vw] sm:w-80 lg:w-96 snap-center flex flex-col">
             <div class="h-56 bg-zinc-50 dark:bg-zinc-800 p-4 flex items-center justify-center border-b border-zinc-200 dark:border-zinc-700">
-              <img src="/Certificates/IMAGES/Excel-Skill-Course.png" 
+              <img src="/Excel-Skill-Course.png" 
                    alt="Advanced Excel for Business Analytics"
                    class="max-h-full w-auto shadow-lg rounded hover:scale-105 transition-transform duration-300">
             </div>
@@ -441,7 +441,7 @@
               <h3 class="font-semibold text-lg sm:text-xl mb-1">Advanced Excel for Business Analytics</h3>
               <p class="text-sm text-zinc-500 dark:text-zinc-400 mb-3">Coursera • 2025</p>
               <p class="text-sm text-zinc-600 dark:text-zinc-300 mb-6 flex-grow">Power Query, Power Pivot, dynamic dashboards & automation.</p>
-              <a href="/Certificates/PDF/Excel-Skill-Course.pdf" 
+              <a href="/Excel-Skill-Course.pdf" 
                  download="Rachit-Jain-Advanced-Excel-Business-Analytics.pdf"
                  class="mt-auto py-3 bg-gradient-to-r from-primary to-accent text-white rounded-xl font-medium flex items-center justify-center gap-2 hover:shadow-lg transition">
                 <i class="fa-solid fa-download"></i> Download Certificate
@@ -651,4 +651,5 @@
   </style>
 
 </body>
+
 </html>
