--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
   </section>
 
   <!-- Experience -->
-  <section id="experience" class="py-20 lg:py-28 bg-zinc-50 dark:bg-zinc-950">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <!-- <section id="experience" class="py-20 lg:py-28 bg-zinc-50 dark:bg-zinc-950"> -->
+    <!-- <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-4xl sm:text-5xl font-bold tracking-tight text-center mb-4">Experience</h2>
       <p class="text-center text-zinc-500 dark:text-zinc-400 mb-12 max-w-2xl mx-auto text-lg">
         Internships, projects & practical exposure in data analytics
@@ -172,7 +172,7 @@
 
       <div class="space-y-12 lg:space-y-16">
 
-        <!-- Experience Item 1 -->
+        <!-- Experience Item 1 
         <div class="grid lg:grid-cols-12 gap-8 lg:gap-12 items-start">
           <div class="lg:col-span-4">
             <div class="bg-white dark:bg-zinc-800 rounded-2xl p-6 shadow-sm border border-zinc-200 dark:border-zinc-700">
@@ -208,10 +208,10 @@
               <span class="px-3 py-1 text-sm bg-zinc-200 dark:bg-zinc-700 rounded-full">ETL</span>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Experience Item 2 -->
-        <div class="grid lg:grid-cols-12 gap-8 lg:gap-12 items-start">
+        <!-- <div class="grid lg:grid-cols-12 gap-8 lg:gap-12 items-start"> 
           <div class="lg:col-span-4">
             <div class="bg-white dark:bg-zinc-800 rounded-2xl p-6 shadow-sm border border-zinc-200 dark:border-zinc-700">
               <h3 class="text-xl sm:text-2xl font-bold">Data Analytics Trainee</h3>
@@ -248,7 +248,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Skills -->
   <section id="skills" class="py-20 lg:py-28 bg-zinc-100 dark:bg-black">
@@ -653,3 +653,4 @@
 </body>
 
 </html>
+
