--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
       <div class="mt-10 text-center">
         <a href="mailto:itsrachitjain99@gmail.com?subject=Data%20Analyst%20Opportunity&body=Hello%20Rachit,%0A%0AI%20came%20across%20your%20portfolio%20and%20would%20like%20to%20connect%20regarding%20a%20Data%20Analyst%20opportunity.%0A%0APlease%20let%20me%20know%20your%20availability%20for%20a%20discussion.%0A%0AThank%20you,"
             class="text-xl font-medium hover:text-accent transition">
-                <i class="fa-solid fa-envelope"></i> Rachit Jain
+                <i class="fa-solid fa-envelope"></i> itsrachitjain
 </a>
 
       </div>
@@ -631,3 +631,4 @@
 
 </body>
 </html>
+
